// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useDeleteCredentialApi should attempt an api call to delete credentials: apiCall 1`] = `
[
  [
    "/api/v1/credentials/bulk_delete/",
    {
      "ids": [
        456,
        789,
      ],
    },
  ],
]
`;

exports[`useDeleteCredentialApi should handle errors while attempting to delete single and multiple credentials: deleteCredentials, error 1`] = `
[
  [
    {
      "id": "generatedid-",
      "title": [
        "toast-notifications.description",
        {
          "context": "deleted-credential_error",
          "count": 1,
          "message": "Mock error",
          "name": "lorem ipsum dolor sit",
        },
      ],
      "variant": "danger",
    },
  ],
  [
    {
      "id": "generatedid-",
      "title": [
        "toast-notifications.description",
        {
          "context": "deleted-credential_error",
          "count": 2,
          "message": "Mock error",
          "name": "lorem ipsum, dolor sit",
        },
      ],
      "variant": "danger",
    },
  ],
]
`;

exports[`useDeleteCredentialApi should handle success while attempting to delete single and multiple credentials: deleteCredentials, success 1`] = `
[
  [
    {
      "id": "generatedid-",
      "title": [
        "toast-notifications.description",
        {
          "context": "deleted-credential",
          "count": 1,
          "name": "lorem ipsum dolor sit",
        },
      ],
      "variant": "success",
    },
  ],
  [
    {
      "id": "generatedid-",
      "title": [
        "toast-notifications.description",
        {
          "context": "deleted-credential",
          "count": 2,
          "name": "lorem ipsum, dolor sit",
        },
      ],
      "variant": "success",
    },
  ],
]
`;

exports[`useDeleteCredentialApi should process an API error response: callbackError 1`] = `
[
  [
    {
      "id": "generatedid-",
      "title": [
        "toast-notifications.description",
        {
          "context": "deleted-credential_error",
          "count": 2,
          "message": "Lorem ipsum",
          "name": "Lorem, Ipsum",
        },
      ],
      "variant": "danger",
    },
  ],
  [
    {
      "id": "generatedid-",
      "title": [
        "toast-notifications.description",
        {
          "context": "deleted-credential_error",
          "count": 2,
          "message": "Dolor sit",
          "name": "Lorem, Ipsum",
        },
      ],
      "variant": "danger",
    },
  ],
  [
    {
      "id": "generatedid-",
      "title": [
        "toast-notifications.description",
        {
          "context": "deleted-credential_error",
          "count": 2,
          "message": "Amet",
          "name": "Lorem, Ipsum",
        },
      ],
      "variant": "danger",
    },
  ],
  [
    {
      "id": "generatedid-",
      "title": [
        "toast-notifications.description",
        {
          "context": "deleted-credential_error",
          "count": 2,
          "message": "Unknown error",
          "name": "Lorem, Ipsum",
        },
      ],
      "variant": "danger",
    },
  ],
]
`;

exports[`useDeleteCredentialApi should process an API success response: callbackSuccess 1`] = `
[
  [
    {
      "id": "generatedid-",
      "title": [
        "toast-notifications.description",
        {
          "context": "skipped-credential",
          "count": 2,
          "name": "Lorem, Ipsum",
        },
      ],
      "variant": "danger",
    },
  ],
  [
    {
      "id": "generatedid-",
      "title": [
        "toast-notifications.description",
        {
          "context": "deleted-credentials-skipped-credentials",
          "count": 1,
          "deleted_names": "Ipsum",
          "skipped_names": "Lorem",
        },
      ],
      "variant": "warning",
    },
  ],
  [
    {
      "id": "generatedid-",
      "title": [
        "toast-notifications.description",
        {
          "context": "deleted-credential",
          "count": 2,
          "name": "Lorem, Ipsum",
        },
      ],
      "variant": "success",
    },
  ],
]
`;
